--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,15 @@
   "license": "MIT",
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/npm": "^7.19.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "cors": "^2.8.5",
     "eslint": "^8.23.0",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
     "npm": "^8.19.1",
     "prettier": "^2.7.1",
