--- a/server/package.json
+++ b/server/package.json
@@ -12,23 +12,33 @@
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/npm": "^7.19.0",
+    "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "eslint": "^8.23.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "npm": "^8.19.1",
     "prettier": "^2.7.1",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.6",
+    "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.11",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.13",
+    "@types/http-errors": "^1.8.2",
+    "@types/morgan": "^1.9.3"
   }
 }
