--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
-    "@types/morgan": "^1.9.3"
+    "@types/morgan": "^1.9.3",
+    "@types/uuid": "^8.3.4"
   }
 }
