--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "eslint": "^8.23.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "npm": "^8.19.1",
     "prettier": "^2.7.1",
@@ -29,6 +31,8 @@
     "typescript": "^4.8.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.5"
   }
 }
