--- a/server/package.json
+++ b/server/package.json
@@ -9,20 +9,26 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/nodemailer": "^6.4.6",
     "@types/npm": "^7.19.0",
+    "@types/uuid": "^8.3.4",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "eslint": "^8.23.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "npm": "^8.19.1",
     "prettier": "^2.7.1",
@@ -32,7 +38,8 @@
     "sqlite3": "^5.0.11",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
