--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "lint": "eslint . --ext .ts",
-    "compile":"tsc -w",
-    "dev":"nodemon ./bin/www "
+    "compile": "tsc -w",
+    "dev": "nodemon ./bin/www ",
+    "test": "jest",
+    "coverage": "yarn test -- --coverage --watchAll=false"
   },
   "license": "MIT",
   "dependencies": {
@@ -17,15 +19,18 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "eslint": "^8.23.0",
     "express": "^4.18.1",
+    "jest": "^29.0.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.7.8",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "npm": "^8.19.1",
     "prettier": "^2.7.1",
@@ -33,19 +38,22 @@
     "sequelize": "^6.21.6",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.11",
+    "supertest": "^6.2.4",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/nodemailer": "^6.4.5",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.2",
+    "@types/jest": "^29.0.2",
     "@types/morgan": "^1.9.3",
-    "@types/uuid": "^8.3.4"
+    "@types/nodemailer": "^6.4.5",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
+    "ts-jest": "^29.0.1"
   }
 }
-   
