--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,16 @@
         "lint": "eslint . --ext .ts",
         "start": "nodemon ./bin/www",
         "compile": "tsc -w",
-        "dev": "ts-node-dev --respawn ./bin/www"
+        "dev": "ts-node-dev --respawn ./bin/www",
+        "test": "jest"
     },
     "license": "MIT",
     "dependencies": {
         "@types/cors": "^2.8.12",
+        "@types/jest": "^29.0.2",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/npm": "^7.19.0",
+        "@types/supertest": "^2.0.12",
         "@types/validator": "^13.7.6",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "^5.36.2",
@@ -23,6 +26,7 @@
         "dotenv": "^16.0.2",
         "eslint": "^8.23.0",
         "express": "^4.18.1",
+        "jest": "^29.0.3",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
@@ -34,7 +38,10 @@
         "sequelize": "^6.21.6",
         "sequelize-typescript": "^2.1.3",
         "sqlite3": "^5.0.11",
+        "supertest": "^6.2.4",
+        "ts-jest": "^29.0.1",
         "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
         "tsconfig": "^7.0.0",
         "typescript": "^4.8.3"
     },
