--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
-    "formik": "^2.2.9",
-    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-toastify": "^9.0.8",
+    "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.33",
     "web-vitals": "^2.1.4",
