--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
         "dotenv": "^16.0.2",
         "eslint": "^8.23.0",
         "express": "^4.18.1",
+        "flutterwave-node-v3": "^1.0.11",
+        "i": "^0.3.7",
         "jest": "^29.0.3",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
