--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "@types/validator": "^13.7.6",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "^5.36.2",
+        "axios": "^0.27.2",
         "bcryptjs": "^2.4.3",
         "cloudinary": "^1.32.0",
         "cookie-parser": "^1.4.6",
@@ -25,6 +26,7 @@
         "dotenv": "^16.0.2",
         "eslint": "^8.23.0",
         "express": "^4.18.1",
+        "flutterwave-node-v3": "^1.0.11",
         "jest": "^29.0.3",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
