--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,13 @@
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
+    "react-loading-icons": "^1.1.0",
+    "react-paginate": "^8.1.3",
+    "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
