--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.4",
         "morgan": "^1.10.0",
+        "node-2fa": "^2.0.3",
         "nodemailer": "^6.7.8",
         "nodemon": "^2.0.19",
         "npm": "^8.19.1",
